--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 certifi==2018.10.15
 chardet==3.0.4
+coverage==3.7.1
 defusedxml==0.5.0
 Django==2.0
 django-allauth==0.38.0
+django-coverage==1.2.4
 django-crispy-forms==1.7.2
 idna==2.7
 mysqlclient==1.3.12
